<resources>
    <string name="app_name">PokemonApp</string>

    <string name="tv_hello">Hello! 👋</string>
    <string name="tv_username">Welcome!</string>
    <string name="tv_pokemon_detail">Pokemon Detail</string>
    <string name="tv_pokemon_name">Pokemon Name</string>
    <string name="tv_moves">Moves</string>
    <string name="tv_types">Types</string>
    <string name="tv_my_pokemon_list">My Pokemon List</string>
    <string name="tv_alt_login">Does not have any account?</string>
    <string name="tv_alt_register">Already have account?</string>

    <!-- Button -->
    <string name="btn_catch">Catch Pokemon</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>

    <!-- Form -->
    <string name="tv_username_title">Username</string>
    <string name="tv_username_hint">Enter Username</string>
    <string name="tv_password_title">Password</string>
    <string name="tv_password_hint">Enter Password</string>
    <string name="tv_password_confirmation_title">Password Confirmation</string>
    <string name="tv_password_confirmation_hint">Enter Password Confirmation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_terjadi_kesalahan">Terjadi kesalahan!</string>
    <string name="alert_title">Confirmation</string>
    <string name="tv_alert_message">Are you sure?</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_confirm">Confirm</string>
    <string name="tv_error_input_blank">This field cannot be empty!</string>
    <string name="tv_error_password_minimum_length">Password must be at least 8 characters long!</string>
    <string name="tv_error_password_mismatch">Passwords do not match!</string>
    <string name="tv_nickname_hint">Enter Nickname</string>
    <string name="btn_save">Save</string>
    <string name="tv_rename">Rename</string>
    <string name="tv_release">Release</string>

</resources>