<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".presentation.ui.home.detailpokemon.DetailPokemonFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/iv_circle_back_arrow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@color/text_500"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ic_back_arrow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_back_arrow"
                app:layout_constraintBottom_toBottomOf="@id/iv_circle_back_arrow"
                app:layout_constraintEnd_toEndOf="@id/iv_circle_back_arrow"
                app:layout_constraintStart_toStartOf="@id/iv_circle_back_arrow"
                app:layout_constraintTop_toTopOf="@id/iv_circle_back_arrow" />


            <TextView
                android:id="@+id/tv_title_pokemon_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppinssemibold"
                android:text="@string/tv_pokemon_detail"
                android:textColor="@color/text_300"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_circle_back_arrow"
                app:layout_constraintStart_toEndOf="@id/iv_circle_back_arrow"
                app:layout_constraintTop_toTopOf="@id/iv_circle_back_arrow" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/background"
        android:contentDescription="@string/app_name"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/btn_catch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_error_detail_pokemon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="16dp"
                android:paddingHorizontal="16dp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:strokeColor="@android:color/transparent">

                <TextView
                    android:id="@+id/tv_error_detail_pokemon"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:background="@drawable/rounded_outline_text_view"
                    android:fontFamily="@font/poppinsmedium"
                    android:gravity="center"
                    android:paddingHorizontal="16dp"
                    android:text="@string/tv_terjadi_kesalahan"
                    android:textColor="@color/neutral_400"
                    android:textSize="11sp" />

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer_detail_pokemon_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone">


                </com.facebook.shimmer.ShimmerFrameLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_detail_pokemon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:background="@color/background"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="20dp"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:id="@+id/iv_detail_pokemon"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@color/primary_300"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        tools:ignore="ImageContrastCheck" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_title_pokemon_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="20dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppinsmedium"
                    android:maxLines="2"
                    android:text="@string/tv_pokemon_name"
                    android:textColor="@color/primary_300"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_base_exp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/tv_pokemon_name"
                    android:textColor="@color/neutral_300"
                    android:textSize="10sp"
                    tools:ignore="SmallSp,TextSizeCheck,TextContrastCheck" />


                <View
                    android:id="@+id/garis_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/neutral_300" />


                <TextView
                    android:id="@+id/tv_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/tv_pokemon_name"
                    android:textColor="@color/neutral_300"
                    android:textSize="10sp"
                    tools:ignore="SmallSp,TextSizeCheck,TextContrastCheck" />


                <TextView
                    android:id="@+id/tv_moves"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/tv_pokemon_name"
                    android:textColor="@color/neutral_300"
                    android:textSize="10sp"
                    tools:ignore="SmallSp,TextSizeCheck,TextContrastCheck" />


            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <Button
        android:id="@+id/btn_catch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="18dp"
        android:backgroundTint="@color/primary_300"
        android:fontFamily="@font/poppinsbold"
        android:padding="12dp"
        android:text="@string/btn_catch"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/pb_catch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>