<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.ui.home.mypokemonlist.MyPokemonListFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/iv_circle_back_arrow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@color/text_500"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ic_back_arrow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_back_arrow"
                app:layout_constraintBottom_toBottomOf="@id/iv_circle_back_arrow"
                app:layout_constraintEnd_toEndOf="@id/iv_circle_back_arrow"
                app:layout_constraintStart_toStartOf="@id/iv_circle_back_arrow"
                app:layout_constraintTop_toTopOf="@id/iv_circle_back_arrow" />


            <TextView
                android:id="@+id/tv_title_pokemon_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppinssemibold"
                android:text="@string/tv_my_pokemon_list"
                android:textColor="@color/text_300"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_circle_back_arrow"
                app:layout_constraintStart_toEndOf="@id/iv_circle_back_arrow"
                app:layout_constraintTop_toTopOf="@id/iv_circle_back_arrow" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_error_pokemon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="16dp"
                android:paddingHorizontal="16dp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:strokeColor="@android:color/transparent">

                <TextView
                    android:id="@+id/tv_error_pokemon"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:background="@drawable/rounded_outline_text_view"
                    android:fontFamily="@font/poppinsmedium"
                    android:gravity="center"
                    android:paddingHorizontal="16dp"
                    android:text="@string/tv_terjadi_kesalahan"
                    android:textColor="@color/neutral_400"
                    android:textSize="11sp" />

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_pokemon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:contentPadding="16dp"
                app:strokeColor="@android:color/transparent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_pokemon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:nestedScrollingEnabled="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:listitem="@layout/item_pokemon" />

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pb_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>